[package]
name = "remote-top"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.35.2"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
